codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_clamps_to_narrow_width.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1867
expression: "render_lines(&lines).join(\"\\n\")"
---

  >_ OpenAI Codex (vtest)
     project
  permissions: YOLO mode
